feat: browse products (customer && merchant)
