# server/service/product_service.go
@@ -18,6 +18,7 @@ type ProductService interface {
 
 	// 商家后台更新商品库存
 	UpdateProductStock(ctx context.Context, id int, newStock int) error
+	GetProductList(ctx context.Context, req types.GetProductListQuery) (list []*types.ProductInfo, count int, err error)
 }
 
 type ProductServiceImpl struct {
@@ -171,4 +172,39 @@ func (p *ProductServiceImpl) UpdateProductStock(ctx context.Context, id int, new
 	}
 
 	return nil
+}
+
+func (p *ProductServiceImpl) GetProductList(ctx context.Context, req types.GetProductListQuery) (list []*types.ProductInfo, count int, err error) {
+	listRaw, cnt, err := p.productDao.ListProduct(ctx, dao.ListProductQuery{
+		Keyword:    req.Keyword,
+		Category:   req.Category,
+		Offset:     req.Offset,
+		Limit:      req.Limit,
+		IsCustomer: req.IsCustomer,
+		OrderBy:    req.OrderBy,
+	})
+	if err != nil {
+		log.Logger.Errorf("GetProductList: Failed to get product list, err: %v", err)
+		return nil, -1, err
+	}
+
+	list = make([]*types.ProductInfo, len(listRaw))
+	for k, listModel := range listRaw {
+		list[k] = &types.ProductInfo{
+			Name:             listModel.Name,
+			Category:         listModel.Category,
+			Price:            listModel.Price,
+			Desc:             listModel.Desc,
+			Stock:            listModel.Stock,
+			PicInfo:          listModel.PicInfo,
+			Dimensions:       listModel.Dimensions,
+			Material:         listModel.Material,
+			Weight:           listModel.Weight,
+			Capacity:         listModel.Capacity,
+			CareInstructions: listModel.CareInstructions,
+			Status:           listModel.Status,
+		}
+	}
+
+	return list, cnt, nil
 }
